--- a/DAY 2/flow_control.ipynb
+++ b/DAY 2/flow_control.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "even <class 'int'> 10\n"
+      "odd\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +91,48 @@
     "\n",
     "else:\n",
     "    print(\"non positive number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is, Nanthini_E\n",
+      "2.0\n",
+      "my age is, 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "import module\n",
+    "\n",
+    "module.nanthini(\"Nanthini_E\")\n",
+    "\n",
+    "#print(module.age)\n",
+    "print(module.divide_numbers(10,5))\n",
+    "module.age(28)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my age is, 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "module.age(28)\n"
    ]
   },
   {
